@@ -17,15 +17,21 @@ About the version numbers... "vX.Y[.Z][devT]" :
 
 Last officially released version is -*> v2.0.3 *-
 
-??102001 (v2.1dev1)
+09102001 (v2.1dev1)
+	- added: chainsetup prints a warning if an unknown
+	         buffering mode is given to -B:mode 
 	- changed: 'rt' buffering mode is preferred over 
 		   'rtlowlatency' if no chain operators are 
 		   present, and multitrack mode is not active
+        - changed: more improvements to double-buffering
 	- fixed: critical bug when running in -B:rwlowlatency 
 		 mode (caused system-lockups with ALSA 0.9.x
 		 oss-emulation)
 	- fixed: explicitly specifying -z:nointbuf had no 
 		 effect
+	- fixed: setting double-buffer length didn't have 
+		 any effect (given either in bmode defaults 
+		 or as -z:db,dbsize)
 06102001 (v2.1dev0)
 	- edi-entries: edi-2, edi-6, edi-10, edi-15
 	- added: more recent config.guess and config.sub to 
